tests/src/frontend/syntax/invalid/type_annotation_3.sk
fun main(): String {
  x = "";
  (x : String) = "Fail";
  x
}
